--- a/templates/boundaries/boundaries-view.html
+++ b/templates/boundaries/boundaries-view.html
@@ -21,17 +21,56 @@
                 bottom: 0;
                 width: 100%;
             }
+
+            #no-boundaries-container{
+                position: relative;
+                display: flex;
+                justify-content: center;
+            }
+            #no-boundaries {
+                position: absolute;
+                z-index: 999;
+
+                font-size: 24px;
+                font-weight: bold;
+                color: midnightblue;
+                background: aliceblue;
+                margin-top: 50px;
+                padding: 36px;
+            }
         </style>
     </head>
     <body>
         <div id="map"></div>
+
+        {% if boundaries|length == 0 %}
+            <div id="no-boundaries-container">
+                <div id="no-boundaries">
+                    No Boundaries Present
+                </div>
+            </div>
+            <script>
+                // when boundaries are not present, set default
+                const boundaries = [
+                  [[8.7832, 34.5085]]
+                ]
+                const setInitialZoom = true
+            </script>
+        {% else %}
+            <script>
+                const boundaries = {{ boundaries }}
+                const setInitialZoom = false
+            </script>
+        {% endif %}
+
+
         <script>
             // define map and its initial boundaries
             const map = L.map('map')
             let bounds = new L.latLngBounds()
 
             // all each polygon to map
-            for (const boundary of {{ boundaries }}) {
+            for (const boundary of boundaries) {
                 const polygon = L.polygon(boundary).addTo(map)
                 // extend map bound to fit this polygon
                 bounds.extend(polygon.getBounds())
@@ -39,6 +78,11 @@
 
             // make map fit bounds
             map.fitBounds(bounds.pad(.5))
+
+            // set initial zoom when no boundaries exist
+            if(setInitialZoom) {
+                map.setZoom(4)
+            }
 
             // load map tiles
             const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
