feat: fixed ui issue

--- a/templates/widget_forms/community/boundary_widget.html
+++ b/templates/widget_forms/community/boundary_widget.html
@@ -6,6 +6,7 @@
     .boundary-container{
         display: flex;
         margin-bottom: 10px;
+        width: 100%
     }
     .boundary-textarea{
         width: 90%
