--- a/templates/boundaries/boundaries-view.html
+++ b/templates/boundaries/boundaries-view.html
@@ -18,6 +18,7 @@
             #map {
                 position: absolute;
                 top: 0;
+                left: 0;
                 bottom: 0;
                 width: 100%;
             }
