feat: changed message of boundary view link

--- a/templates/widget_forms/community/boundary_widget.html
+++ b/templates/widget_forms/community/boundary_widget.html
@@ -81,7 +81,7 @@
     id="view-saved-boundaries"
     target="_blank"
     href="{% url 'boundaries-view' %}?community={{ community_id }}">
-    View Saved Boundaries
+    View All Saved Boundaries
 </a>
 <input
         type="file" id="shapefile-input" name="shapefile" style="display: none"
