--- a/templates/communities/upload-boundaries-file.html
+++ b/templates/communities/upload-boundaries-file.html
@@ -1,6 +1,113 @@
-{% extends 'register-base.html' %} {% block title %} Place Holder {% endblock %} {% load static %} {% block card %}
-    <div class="w-90">
-        <h2 class="no-top-margin">Upload Shape File Place Holder</h2>
+{% extends 'register-base.html' %} {% block title %} Add Community {% endblock %} {% load static %} {% block card %}
+    <style>
+        #define-community-top-text{
+            width: 94%;
+        }
+
+        #define-community-body{
+            position: relative;
+            height: 100%;
+        }
+        #browse-files-btn{
+            margin-left: 6px;
+        }
+        #navigate-to-option{
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            font-weight: bold;
+        }
+
+        #browse-files-container{
+            margin-top: 20px;
+        }
+
+        #community-boundary-upload {
+            position: relative;
+            display: flex;
+        }
+
+        #community-boundary-upload input{
+            width: 60%;
+            padding: 24px;
+            padding-left: 10px;
+            cursor: pointer;
+        }
+
+        #community-boundary-search i{
+            position: absolute;
+            right: 10px;
+            top: 14px;
+        }
+
+        #buttonRow{
+            margin-top: 20px
+        }
+
+        a.disabled-btn{
+            pointer-events: none;
+            user-select: none;
+        }
+
+        #skip-this-step{
+            margin-left: 20px;
+        }
+
+        .hidden{
+            visibility: hidden;
+        }
+    </style>
+    <div class="w-90" id="define-community-body">
+        <h2 class="no-top-margin">Add Community boundaries</h2>
+        <p id="define-community-top-text">
+            Add your community boundaries by uploading a shape file below. We accept file types like (.shp, .shx, .dhp).
+            You can create shape files on third-party websites like QGIS, LINK2, and LINK3.
+        </p>
+        <div id="navigate-to-option">
+            Or <a class="darkteal-text underline-hover" href="{% url 'add-community-boundaries' %}">search NLD database</a>
+        </div>
+
+        <div id="browse-files-container">
+            <label class="pad-top-1-5">Upload shape file (. shp, . shx, . dhp)</label><br>
+            <div id="community-boundary-upload">
+                <input class="input-field" type="text"
+                       placeholder="Select file"
+                       readonly
+                >
+                <div
+                    id="browse-files-btn"
+                    class="primary-btn action-btn"
+                    onclick="uploadShapefile(); event.preventDefault()"
+                >
+                    Browse files
+                </div>
+            </div>
+        </div>
+
     </div>
 
+    <div class="flex-this w-90" id="buttonRow">
+
+        <div class="w-90 flex-this flex-start">
+            <div>
+                <a
+                    id="community-boundary-continue-btn"
+                    class="primary-btn action-btn disabled-btn"
+                    href="{% url 'confirm-community' %}"
+                    onclick="setBoundaries(); event.preventDefault()"
+                >
+                    Confirm location <i class="fa fa-arrow-right"></i>
+                </a>
+            </div>
+            <div class="margin-right-8" id="skip-this-step">
+                <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        function enableContinueButton(){
+            document.querySelector('#community-boundary-continue-btn').classList.remove('disabled-btn')
+        }
+    </script>
 {% endblock %}
