--- a/templates/communities/upload-boundaries-file.html
+++ b/templates/communities/upload-boundaries-file.html
@@ -103,7 +103,7 @@
     <div class="w-90" id="define-community-body">
         <h2 class="no-top-margin">Add Community boundaries</h2>
         <p id="define-community-top-text">
-            Add your community boundaries by uploading a shape file below. We accept file types like (.shp, .shx, .dhp).
+            Add your community boundaries by uploading a shape file below. We accept file types like (.zip).
             You can create shape files on third-party websites like QGIS, LINK2, and LINK3.
         </p>
         <div id="navigate-to-option">
@@ -111,9 +111,10 @@
         </div>
 
         <div id="browse-files-container">
-            <label class="pad-top-1-5">Upload shape file (. shp, . shx, . dhp)</label><br>
+            <label class="pad-top-1-5">Upload shape file (. zip)</label><br>
             <div id="community-boundary-upload">
                 <input class="input-field" type="text"
+                       id="select-file-input"
                        placeholder="Select file"
                        readonly
                        onclick="triggerShapeFileInput()"
@@ -167,7 +168,6 @@
                     id="community-boundary-continue-btn"
                     class="primary-btn action-btn disabled-btn"
                     href="{% url 'confirm-community' %}"
-                    onclick="setBoundaries(); event.preventDefault()"
                 >
                     Confirm location <i class="fa fa-arrow-right"></i>
                 </a>
@@ -182,9 +182,36 @@
       function enableContinueButton(){
         document.querySelector('#community-boundary-continue-btn').classList.remove('disabled-btn')
       }
+      function disableContinueButton(){
+        document.querySelector('#community-boundary-continue-btn').classList.add('disabled-btn')
+      }
       function triggerShapeFileInput() {
         document.getElementById('shapefile-input').click()
       }
+
+      async function registerBoundary(boundaryName, boundaryCoordinates, removePrevious=true) {
+        const payload = {
+            source: 'shape-file',
+            name: boundaryName,
+            boundaries: [boundaryCoordinates],
+            remove_previous: removePrevious
+        }
+
+        // do post call to set boundaries in request
+        const registrationResponse = await fetch("{% url 'registration-boundaries' %}", {
+                method: 'POST',
+                body: JSON.stringify(payload),
+                headers: {
+                  'X-CSRFToken': '{{csrf_token}}'
+                }
+            })
+
+        if (registrationResponse.status !== 201) {
+            throw new Error('Error Setting Boundaries')
+        }
+
+      }
+
       async function uploadShapeFileData(self) {
         var files = event.target.files
         var file = files[0]
@@ -194,6 +221,7 @@
         // hide feedback messages
         successMessage.classList.add('invisible')
         failureMessage.classList.add('invisible')
+        document.querySelector('#selected-location').classList.add('invisible')
 
         try {
         const shapeFileData = await file.arrayBuffer()
@@ -214,20 +242,28 @@
               return [coordinate[1], coordinate[0]]
             }
           )
-          // upload shape file to cache
-          // uploadNewBoundary(distinctBoundaryStr)
+
+          // upload shape file to session for community
+          await registerBoundary(geoJsonData.fileName, distinctBoundaryReordered, i === 0)
         }
+
         successMessage.classList.toggle('invisible')
+        // show and label ui elements
+        document.querySelector('#selected-title').innerText = geoJsonData.fileName
+        document.querySelector('#selected-location').classList.remove('invisible')
+        enableContinueButton()
 
       } catch (e) {
-          failureMessage.classList.toggle('invisible')
-          console.log('Error extracting boundary data from Shape File', e)
-        }
+        failureMessage.classList.toggle('invisible')
+        console.log('Error extracting boundary data from Shape File', e)
+        disableContinueButton()
+      }
+        document.querySelector('#select-file-input').value = file.name
+        // set value to null so user can resubmit
+        // same file if needed
+        self.value = null
+        return false
 
-          // set value to null so user can resubmit
-          // same file if needed
-          self.value = null
-          return false
         }
     </script>
 <script src="{% static 'javascript/shpjs.js' %}"></script>
