feat: user can view boundaries

--- a/templates/communities/upload-boundaries-file.html
+++ b/templates/communities/upload-boundaries-file.html
@@ -142,7 +142,9 @@
 
             <div id="selected-title-wrapper">
                 <div id="selected-title">Placeholder</div>
-                <a id="nld-link" target="_blank">
+                <a id="nld-link"
+                   href="{% url 'community-boundaries-view' community_id %}"
+                   target="_blank">
                     View map in new tab
                     <i class="fa fa-arrow-up-right-from-square"></i>
                 </a>
