--- a/templates/projects/embed-project.html
+++ b/templates/projects/embed-project.html
@@ -10,10 +10,6 @@
     <body>
         <!-- Icons w/o title -->
         <div id="img-only" class="flex-this flex-start wrap w-100 margin-top-1">
-            <div id="notice-img" class="margin-left-1 margin-right-1">
-                <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="" alt="">
-            </div>
-            <!-- 
             {% if project.has_bclabels or project.has_tklabels %}
                 {% for community, labels in label_groups.items %}
                     {% for tklabel in labels.tk_labels %}
@@ -27,11 +23,11 @@
                         </div>
                     {% endfor %}
                 {% endfor %}
-            {% endif %} -->
+            {% endif %}
         </div>
 
         <!-- Icons w/o title -->
-        <!-- {% if not layout or layout == "1" %}
+        {% if not layout or layout == "1" %}
             <div class="flex-this flex-start wrap w-100 margin-top-1">
                 {% if notices %}
                     {% for notice in notices %}
@@ -56,10 +52,10 @@
                     {% endfor %}
                 {% endif %}
             </div>
-        {% endif%} -->
+        {% endif%}
 
         <!-- Icons w/ title -->
-        <!-- {% if layout == "2" %}
+        {% if layout == "2" %}
             <div class="flex-this wrap w-100">
                 {% if notices %}
                     {% for notice in notices %}
@@ -152,10 +148,10 @@
                     {% endfor %}
                 {% endif %}
             </div>
-        {% endif%} -->
+        {% endif%}
 
         <!-- Full Text -->
-        <!-- {% if layout == "3" %}
+        {% if layout == "3" %}
             <div class="flex-this wrap w-100">
                 {% if notices %}
                     {% for notice in notices %}
@@ -260,12 +256,12 @@
                     {% endfor %}
                 {% endif %}
             </div>
-        {% endif %} -->
+        {% endif %}
 
         <div class="flex-this wrap w-100">
             <div class="flex-this ">
                 <div class="margin-left-8 margin-right-8 padding-bottom-1 pad-top-1"><a href="https://localcontexts.org"><img style="width:30px;" src="https://localcontexts.org/wp-content/uploads/2023/04/White-Background.png" alt="Local Contexts Icon"></a></div>
-                <div class="auto-margin font-size-14"><a id="project-link" class="darkteal-text underline-hover bold"></a></div>
+                <div class="auto-margin font-size-14"><a id="project-link" class="darkteal-text underline-hover bold" href="{{project.project_page}}">{{project.project_page}}</a></div>
             </div>
         </div>
     </body>
