--- a/localcontexts/static/css/register.css
+++ b/localcontexts/static/css/register.css
@@ -25,8 +25,8 @@
   border-radius: 5px 5px;
   max-width: 1200px;
   min-width: 1200px;
-  min-height: 650px;
-  max-height: 650px;
+  min-height: 600px;
+  max-height: 600px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background-color: #fff;
 }
@@ -308,14 +308,17 @@ input[type="checkbox"] {
   align-items: center;
 }
 
-.horizental-line {
-  height: 1px;
+.horizontal-line-right,
+.horizontal-line-left {
   width: 100%;
-  background: black;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.register-text {
-  display: flex;
-  align-self: start;
-  margin-left: 35px;
+.horizontal-line-right {
+  margin-left: 16px;
+}
+
+.horizontal-line-left {
+  margin-right: 16px;
 }
