--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -24,25 +24,22 @@
                 <label>Password</label>
                 <input type="password" name="password" required>
             </div>
-            {% comment %} dhfdsgfsdg {% endcomment %}
-            <div>
-                <a href="{% url 'reset_password'%}" class="darkteal-text underline-hover bold">Forgot your password?</a>
+            <div class="flex-this space-between pad-top-1-5">
+                <div>
+                    <a href="{% url 'reset_password'%}" class="darkteal-text underline-hover bold">Forgot your password?</a>
+                </div>
+                <div><button class="primary-btn action-btn margin-top-2 default-btn-width">Sign in</button></div>
             </div>
-            <div class="flex-this column signin-banner margin-top-2">
-                <div class="w-100">
-
-                    <div class="flex-this justify-center"> <button class="primary-btn action-btn margin-top-2 w-100 signin-btn">Sign in</button></div>
-                </div>
-                <div class="flex-this justify-center align-center gap-1">
-                    <div class="horizental-line"> </div>
-                   <p>or</p>
-                   <div class="horizental-line"> </div>
-                </div>
-                <div class="flex-this">
-                    <a class="w-100 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' %}"><img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Sign in With Google</span></a>
-                </div>
-                <input type="hidden" name="next" value="{{ request.GET.next }}"/>
-                </form>
+            <div class="center-items">
+                <div class="horizontal-line-left"></div>
+                <p>or</p>
+                <div class="horizontal-line-right"></div>
+            </div>
+            <div class="flex-this">
+                <a class="w-100 g-auth-button" href="{% provider_login_url 'google' %}"><img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Register With Google</span></a>
+            </div>
+            <input type="hidden" name="next" value="{{ request.GET.next }}"/>
+        </form>
 
                 <!-- Alerts -->
                 {% include 'partials/_alerts.html' %}
