--- a/templates/partials/infocards/_institution-card.html
+++ b/templates/partials/infocards/_institution-card.html
@@ -40,6 +40,10 @@
                     {% endif %}
                 {% endif %}
 
+
+                {% include 'snippets/notifications.html' with scope=institution %}
+                <br>
+                
                 {% if '/dashboard/' in request.path %}
                     {% if institution_projects %}
                         {% if request.user in institution.get_distinct_creators  %}
