--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'auth-base.html' %} {% block title %} Home {% endblock %}{% load static %} {% block main %}
 
-    {% include 'partials/infocards/_user-dashcard.html' %}
+    {% include 'partials/infocards/_user-dashcard.html' with scope=user %}
 
     <div class="flex-this justify-center">{% include 'partials/_alerts.html' %}</div>
     
