--- a/templates/partials/infocards/_institution-dashcard.html
+++ b/templates/partials/infocards/_institution-dashcard.html
@@ -15,7 +15,7 @@
 
             <!-- Notifications -->
             <div class="flex-this w-30 flex-end">
-                {% include 'snippets/notifications.html' %}
+                {% include 'snippets/notifications.html' with scope=institution %}
 
                 {% if request.user == institution.institution_creator or member_role == 'admin'%}
                     <div class="margin-left-8">
