handled the ( ' ) bug of notification div's id

--- a/templates/snippets/notifications.html
+++ b/templates/snippets/notifications.html
@@ -10,7 +10,7 @@
 
 
 <div class="dropdown margin-right-8">
-    <a onclick="toggleNotifications('{{ scope }}')" class="primary-btn white-btn dropbtn"> 
+    <a onclick="toggleNotifications('{{ scope|escapejs }}')" class="primary-btn white-btn dropbtn"> 
         Notifications
         <i 
         class="
