--- a/templates/partials/_project-contributor-view.html
+++ b/templates/partials/_project-contributor-view.html
@@ -44,7 +44,7 @@
 
                     {% if notice.notice_type == 'attribution_incomplete' %}
                         <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
-                            <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" width="78" height="78"></div>
+                            <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" alt="black square with an unfinished square in the middle in white" width="78" height="78"></div>
                             <div class="w-80 pad-top-1">
                                 <h3 class="no-top-margin">Attribution Incomplete Notice</h3>
                                 <p>{{ notice.default_text}}</p>
