--- a/templates/snippets/project_notices.html
+++ b/templates/snippets/project_notices.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="flex-this column center-text margin-left-16 align-center">
-            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" width="73px"></div>
+            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/ci-attribution-incomplete.png' %}" alt="black square with an unfinished square in the middle in white" width="73px"></div>
             <div><p id="title-attr-notice" class="grey-text">Attribution Incomplete <br> Notice</p></div>
             <div class="notice-checkbox-container">
 
